Fix Message style when text is too long

--- a/components/message/style/index.less
+++ b/components/message/style/index.less
@@ -29,6 +29,10 @@
     pointer-events: all;
   }
 
+  &-notice-content-text {
+    word-break: break-word;
+  }
+
   &-success .@{iconfont-css-prefix} {
     color: @success-color;
   }
